--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "enhancedwdl",
   "displayName": "EnhancedWDL",
   "description": "Professional syntax highlighting and language support for WDL (Workflow Description Language) files with enhanced features",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "publisher": "pzweuj",
   "repository": {
     "type": "git",
@@ -55,8 +55,11 @@
     "test": "npm run compile && node out/test/runTest.js"
   },
   "devDependencies": {
-    "@types/vscode": "^1.74.0",
+    "@types/jest": "^30.0.0",
     "@types/node": "^18.0.0",
+    "@types/vscode": "^1.74.0",
+    "jest": "^30.0.5",
+    "ts-jest": "^29.4.0",
     "typescript": "^4.9.0"
   },
   "dependencies": {
