--- a/package.json
+++ b/package.json
@@ -59,14 +59,12 @@
     "vscode:prepublish": "npm run compile",
     "compile": "npx tsc -p ./",
     "watch": "npx tsc -watch -p ./",
-    "test": "npm run compile && node out/test/runTest.js"
+    "package": "vsce package",
+    "build": "npm run compile && npm run package"
   },
   "devDependencies": {
-    "@types/jest": "^30.0.0",
     "@types/node": "^18.0.0",
     "@types/vscode": "^1.74.0",
-    "jest": "^30.0.5",
-    "ts-jest": "^29.4.0",
     "typescript": "^4.9.0"
   },
   "dependencies": {
